force-app/main/default/objects/custom_create338__c/custom_create338__c.object-meta.xml
<CustomObject>
    <label>Custom created object338</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects338</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>