force-app/main/default/objects/custom_create338__c/fields/custom_create_338field514__c.field-meta.xml
<CustomField>
    <fullName>custom_create_338field514__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 338field514</label>
    <type>Checkbox</type>
</CustomField>