force-app/main/default/objects/custom_create338__c/fields/custom_create_338field586__c.field-meta.xml
<CustomField>
    <fullName>custom_create_338field586__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 338field586</label>
    <type>Checkbox</type>
</CustomField>